@@ -7,7 +7,8 @@ CHANGELOG for Fall of Eden
 
 Version 0.3v
 ------------
-* 
+* Fixed a bug in Terry vag scene.
+* Tweaked Estros/Testos so that growth/shrinking is more of a sliding scale.
 
 --------------------------------------------
              PREVIOUS VERSIONS
